fixed layout issues

--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -1,4 +1,4 @@
 mat-drawer-content {
-  height: calc(100vh - #{64px + (20px * 2)});
-  padding: 20px;
+  height: calc(100vh - #{64px + (24px * 2)});
+  padding: 24px 16px;
 }
